fixed forside on mobile devices

--- a/app/styles/frontpage.css
+++ b/app/styles/frontpage.css
@@ -11,6 +11,13 @@
 	padding-top: 0px;
 }
 
+@media only screen and (max-width: 712px) {
+	.boxed-produkt {
+		width: 98% !important;
+		height: 270px;
+	}
+}
+
 .boxed-produkt h4 {
 	padding-left: 9px;
 	padding-right: 5px;
